--- a/ayax-event/package.json
+++ b/ayax-event/package.json
@@ -19,6 +19,8 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/node": "22.7.4",
+    "@types/react": "18.3.10",
     "eslint": "^8",
     "eslint-config-next": "14.2.13",
     "postcss": "^8",
