--- a/ayax-event/package.json
+++ b/ayax-event/package.json
@@ -2,6 +2,7 @@
   "name": "ayax-event",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -19,6 +20,7 @@
     "jose": "^5.9.3",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.447.0",
+    "midtrans-client": "^1.3.1",
     "mongodb": "^6.9.0",
     "next": "14.2.13",
     "react": "^18",
