--- a/ayax-event/package.json
+++ b/ayax-event/package.json
@@ -14,6 +14,7 @@
     "@tabler/icons-react": "^3.19.0",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
+    "cloudinary": "^2.5.0",
     "clsx": "^2.1.1",
     "cookies-next": "^4.2.1",
     "framer-motion": "^11.9.0",
